frontend/soilhive-app/src/styles/prime.react.override.scss
.p-autocomplete {
  border: 1px solid #dddddd;
}

.p-autocomplete-panel {
  background: var(--color-neutral-white);
  border: 0.063rem solid var(--color-neutral-dark-100);
  border-radius: 0.25rem;
  box-shadow: var(--shadow-interface);

  .p-autocomplete-items {
    padding: 0.25rem 1rem;

    .p-autocomplete-item {
      padding: 0.5rem 0;
      font-size: var(--font-size-md);
      color: var(--color-neutral-black);
      border-bottom: 0.063rem solid var(--color-neutral-dark-100);

      &:last-child {
        border-bottom: none;
      }

      &:hover {
        background: transparent;
        color: var(--color-cta-default-hover);
        cursor: pointer;
      }

      &.p-highlight {
        background: transparent;
        color: var(--color-cta-default-solid);
      }
    }
  }
}

.p-autocomplete-dd {
  &:hover,
  &:has(.p-inputtext:focus) {
    border-color: var(--color-cta-primary-solid);
  }
}

.p-inputtext {
  border-radius: 4px;
  padding: 6px 12px;
  font-size: var(--font-size-sm);
  font-weight: var(--font-weight-regular);
  border: none;
  box-shadow: none;
}

.p-button {
  color: #868686;
  background: #ffffff;
  border: none;
}

.p-checkbox {
  &.p-highlight {
    .p-checkbox-box {
      background-color: var(--color-cta-default-solid);
      border-color: var(--color-cta-default-solid);
    }
  }

  &:hover {
    .p-checkbox-box {
      border-color: var(--color-cta-default-solid);
    }
  }

  .p-checkbox-box {
    border-color: var(--color-neutral-dark-400);
  }
}

.p-inputwrapper {
  border: 2px solid var(--color-neutral-dark-100);
  outline: none;
  box-shadow: none;
  background-color: var(--color-neutral-white);
  border-radius: 0.25rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  .p-inputtext {
    background-color: var(--color-neutral-white);
  }

  .p-dropdown-label {
    padding: 10px;
  }

  &:not(.p-disabled) {
    &.p-focus {
      border-color: var(--color-cta-default-solid);

      .p-dropdown-trigger,
      .p-datepicker-trigger,
      .p-multiselect-trigger,
      .p-dropdown-clear-icon {
        color: var(--color-cta-default-solid);
      }
    }
    &:hover {
      border-color: var(--color-cta-default-hover);

      .p-dropdown-trigger,
      .p-datepicker-trigger,
      .p-multiselect-trigger,
      .p-dropdown-clear-icon {
        color: var(--color-cta-default-hover);
      }
    }
  }

  .p-dropdown-trigger,
  .p-datepicker-trigger,
  .p-multiselect-trigger,
  .p-dropdown-clear-icon {
    border: none;
    color: var(--color-neutral-dark-400);
  }
}

.p-datepicker {
  .p-link {
    &:hover {
      color: var(--color-cta-default-hover);
    }
  }
  .p-datepicker-prev,
  .p-datepicker-next {
    color: var(--color-cta-default-solid);

    &:enabled:hover {
      border-color: var(--color-cta-default-solid);
    }
  }
}

.p-datatable {
  .p-sortable-column {
    &:hover {
      box-shadow: inset 0 0 0 0.1rem var(--color-cta-default-hover);

      .p-sortable-column-icon {
        color: var(--color-cta-default-hover);
      }
    }
  }

  &:not(.sh-primereact-table) .p-sortable-column-icon {
    color: var(--color-cta-default-solid);
  }

  &.sh-primereact-table {
    font-size: var(--font-size-sm);
    border: 1px solid var(--color-neutral-dark-300);
    background-color: var(--color-neutral-white);
    border-radius: 0.5rem;

    .p-datatable-thead {
      th {
        background-color: var(--color-neutral-light);
        color: var(--color-neutral-black);
        border-bottom: 1px solid var(--color-neutral-dark-300);
        box-shadow: none;
        padding: 1.625rem 0.75rem 1.25rem;

        &:first-child {
          border-top-left-radius: 0.5rem;
          padding-left: 1.5rem;
        }
        &:last-child {
          border-top-right-radius: 0.5rem;
          padding-right: 1.5rem;

          .p-column-header-content {
            justify-content: flex-end;
          }
        }
      }
    }

    .p-datatable-tbody {
      > tr {
        background-color: transparent;

        > td {
          background-color: transparent;
          color: var(--color-neutral-black);
          border-bottom: 1px solid var(--color-neutral-dark-300);
          padding: 1.5rem 0.75rem 1.125rem;

          &:first-child {
            padding-left: 1.5rem;
          }
          &:last-child {
            padding-right: 1.5rem;
          }
        }

        &:last-of-type > td {
          border-bottom: none;

          &:first-child {
            border-bottom-left-radius: 0.5rem;
          }
          &:last-child {
            border-bottom-right-radius: 0.5rem;
          }
        }
      }
    }
    .p-datatable-emptymessage {
      td {
        color: var(--color-neutral-black);
        text-align: center;
      }
    }
  }
}

.p-paginator {
  .p-paginator-element {
    &:hover {
      background-color: var(--color-bg-secondary);
      border-color: var(--color-bg-primary);
    }
    &.p-highlight {
      background-color: var(--color-bg-primary);
    }
  }
}

